--- a/BankingProject/src/main/webapp/WEB-INF/web.xml
+++ b/BankingProject/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,21 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+ <servlet-name>banking</servlet-name>
+      <servlet-class>
+         org.springframework.web.servlet.DispatcherServlet
+      </servlet-class>
+ <init-param> 
+ <param-name>contextConfigLocation</param-name>
+ <param-value>/WEB-INF/appconfig.xml</param-value>
+ </init-param>
+     
+ <load-on-startup>1</load-on-startup>
+ </servlet>
+
+   <servlet-mapping>
+      <servlet-name>banking</servlet-name>
+      <url-pattern>*.lti</url-pattern>
+   </servlet-mapping>
 </web-app>
